cluster/apps/default/kopia/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name lidarr
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`backups.${SECRET_DOMAIN}`)
      priority: 99
      middlewares:
        - name: headers
          namespace: default
        - name: authelia
          namespace: default
      services:
        - name: *name
          port: 80
          namespace: default
